--- a/style.css
+++ b/style.css
@@ -3,7 +3,9 @@
     margin: 0;
 }
 body{
-    background-color: #e3f2fd;
+  /*  background-color: #e3f2fd;*/
+    background-color:white;
+    
 }
 
 /* Navbar Starts here */
